Finally did some testing on mobile, added a greater click radius (15px) All newly generated polygons are selected by default to demonstrate that polygons are selectable without the need for mentioning it Now when deleting polygons, only the selected polygon is deleted Made point radius 4 instead of 5 to be a little sleeker Turned off user-select to avoid mobile issues

--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,13 @@
 * {
   box-sizing: border-box;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 html,
 body {
+  background-color: black;
   height: 100%;
   margin: 0px;
   overflow: hidden;
